# chayenity

./: .env.example  .gitignore  .mcp.json  Jenkinsfile  LICENSE  README.md  lint-staged.config.js  package.json
server/: .env.example  .gitignore  2-Local Community Marketplace.txt  AI_AGENT_INSTRUCTIONS.md  API_DOCUMENTATION.md  API_QUICK_REFERENCE.md  CLAUDE.md  DataBase.md  Dockerfile  FILE_CONSOLIDATION_PLAN.md  FRONTEND_INTEGRATION_GUIDE.md  HOURZ_BACKEND_TODO.md  HOURZ_BACKEND_TODO_OLD.md  IMAGE_MANAGEMENT_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  README.md  SECURITY_ANALYSIS.md  SECURITY_SOLUTION.md  TESTING_REPORT.md  alembic.env.py.temp  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  sonar-project.properties  test_buddy_system.py  test_chat_apis.py  test_gig_system.py  test_user_profile_system.py
server/alembic/: env.py
server/alembic/versions/: 001_initial_schema.py  1b79aaf7dfd5_initial_sqlmodel_migration.py  2189ac537553_initial_marketplace_schema_with_uuid_.py  49a196e0696c_add_created_at_to_province.py  b683d6b5b887_add_uploadedfile_model.py
server/app/: api.py  enhanced_security.py  main.py  models.py  security.py  websocket_manager.py
server/app/configs/: app_config.py
server/app/crud/: buddy_crud.py  chat_crud.py  chat_crud_async.py  gig_crud.py  review_crud.py  transaction_crud.py  upload_crud.py  user_crud.py
server/app/database/: base.py  (+2 more)
server/docs/: API_DOCUMENTATION.md  Hourz_AI_Agent_Requirement.md
server/scripts/: check_tables.py  init_db.bat  init_db.sh  init_db_directly.py  reset_db.py  test_user_crud.py
(+330 files in other folders)
